# picklehacks-2021

./: .coverage  .gitignore  README.md  log.txt  pyproject.toml  runtests.sh
game/: __main__.py  client.py  entity.py  interface.py  render.py  server.py
maps/: mst_campus.txt
pickle/: __main__.py  main.py  render.py
unittests/: test_interface.py
