[tool.poetry]
name = "ACMGameEngine"
version = "0.1.0"
description = "A terminal based multiplayer game"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "game" }
]


[tool.poetry.dependencies]
python = "^3.8"
websockets = "^10.0"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
coverage = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
picklehacks = "game.client:start"
pickleserver = "game.server:start"
